--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ oorandom = "11.1.3"
 getrandom = "0.2.7"
 glam = "0.21.3"
 mint = "0.5.9"
+prost = "0.11.0"
 chess = {git = "https://github.com/INDA22PlusPlus/castorm-chess.git"}
